Fixed spacing between Join Now and Sign In buttons on homepage

--- a/app/assets/stylesheets/components/homepage.scss
+++ b/app/assets/stylesheets/components/homepage.scss
@@ -37,6 +37,7 @@
 }
 
 .signup-nav {
+  margin-left: 1rem;
   color: #0a66c2;
   box-shadow: inset 0 0 0 1px #0a66c2;
   border-radius: 25px;
